fix: shift dum_venku crop to 20% (show more bottom)

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 #header-carousel .carousel-item:nth-child(2) img {
-    object-position: center 0%;
+    object-position: center 20%;
 }
 
 #header-carousel .carousel-item:nth-child(3) img {
